--- a/contest/leetcode/Round397/2后缀和.md
+++ b/contest/leetcode/Round397/2后缀和.md
@@ -1,21 +1,6 @@
-/*
-TLE
-class Solution {
-public:
-    int maximumEnergy(vector<int>& energy, int k) {
-        int n=energy.size();
-        int ans=-1e9;
-        for(int i=0;i<n;i++){
-            int sum=energy[i];
-            for(int j=i+k;j<n;j+=k){
-                sum+=energy[j];
-            }
-            ans=max(ans,sum);
-        }
-        return ans;
-    }
-};
-*/
+### 后缀和
+可以倒叙枚举，也可以直接反转过来，使用前缀和
+```cpp
 class Solution {
 public:
     int maximumEnergy(vector<int>& energy, int k) {
@@ -32,3 +17,4 @@ public:
         return ans;
     }
 };
+```
