--- a/contest/leetcode/Round397/3类二维前缀和.md
+++ b/contest/leetcode/Round397/3类二维前缀和.md
@@ -1,3 +1,7 @@
+### 类似二维前缀和的思路
+只不过这个是求子矩阵的最小值
+在原矩阵加上一行一列最大值，避免-1下标索引的出现
+```cpp
 class Solution {
 public:
     int maxScore(vector<vector<int>>& grid) {
@@ -15,3 +19,4 @@ public:
         return ans;
     }
 };
+```
